# sel4runtime

./: CMakeLists.txt  Findsel4runtime.cmake  README.md
arch/aarch64/: Convention.md  crt0.S  crti.S  crtn.S
arch/arm/: Convention.md  crti.S  crtn.S
arch/ia32/: crt0.S  crti.S
arch/riscv32/: Convention.md  crtn.S
arch/x86_64/: Convention.md
crt/: README.md  crt1.c
crt/arch/arm/: crt0.S
crt/arch/riscv/: crt0.S  sel4_crt0.S
crt/arch/riscv32/: crt0.S
crt/arch/riscv64/: Convention.md
crt/arch/x86_64/: crt0.S
crt/sel4_arch/aarch32/: Convention.md  crt0.S  crti.S  crtn.S  sel4_crt0.S
crt/sel4_arch/aarch64/: Convention.md  crt0.S  crti.S  crtn.S  sel4_crt0.S
crt/sel4_arch/ia32/: Convention.md  crt0.S  crti.S  crtn.S  sel4_crt0.S
crt/sel4_arch/riscv32/: Convention.md  crti.S  crtn.S
crt/sel4_arch/riscv64/: Convention.md  crti.S  crtn.S
crt/sel4_arch/x86_64/: Convention.md  crt0.S  crti.S  sel4_crt0.S
include/: sel4runtime.h
include/arch/riscv/sel4runtime/: thread_arch.h
include/mode/32/sel4runtime/mode/: elf.h
include/mode/64/sel4runtime/mode/: elf.h
include/sel4_arch/aarch32/sel4runtime/: thread_arch.h
include/sel4_arch/aarch64/sel4runtime/: thread_arch.h
include/sel4_arch/ia32/sel4runtime/: thread_arch.h
include/sel4_arch/x86_64/sel4runtime/: thread_arch.h
include/sel4runtime/: auxv.h  elf.h  start.h  stddef.h  stdint.h  thread.h
src/: README.md  auxv.h  crt1.c  elf_helper.h  env.c  init.c  init.h  memcpy.c  memset.c  start.c  start.h  start_root.c  thread.h  util.h  vsyscall.c
src/arch/aarch32/: crt0.S  sel4_crt0.S
src/arch/aarch64/: crt0.S  sel4_crt0.S
src/arch/ia32/: crt0.S  sel4_crt0.S
src/arch/riscv/: crt0.S  sel4_crt0.S  thread_arch.h
src/arch/riscv32/: crti.S  sel4_crt0.S
src/arch/riscv64/: crtn.S
src/arch/x86_64/: crt0.S  sel4_crt0.S
src/mode/32/: elf_helper.h
src/mode/64/: elf_helper.h
src/mode/64/mode/: elf_helper.h
src/sel4_arch/aarch32/: Convention.md  __aeabi_read_tp.s  __aeabi_read_tp_c.c  crti.S  sel4_crt0.S  thread_arch.h
src/sel4_arch/aarch64/: crtn.S  sel4_crt0.S  thread_arch.h
src/sel4_arch/ia32/: Convention.md  sel4_crt0.S  thread_arch.h
src/sel4_arch/riscv32/: Convention.md
src/sel4_arch/riscv64/: crti.S  crtn.S
src/sel4_arch/x86_64/: Convention.md  crt0.S  crti.S  thread_arch.h
